tdf#168424 editeng: Fix unsafe s/uint implicit cast in RTF parser

The editeng RTF parser was round-tripping signed integers through a
sal_uInt16 via implicit casts when populating SvxLRSpaceItem. This
worked because such an implicit cast may convert signed numbers into
their unsigned two's complement representation, and vice-versa.

Unfortunately, a recent change to SvxLRSpaceItem replaced the final
implicit uint-to-sint cast with an implicit uint-to-double one, which
does not have the same properties.

Change-Id: I80b1a36c47323309b33a8ddaee652c238a7530f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191052
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit c93d70db199cc7f89490cf9f34aa43ea67892c52)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191101
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>